# livelog-ui

./: .gitignore  package-lock.json  package.json  tailwind.config.js   README.md
.github/workflows/: main.yml
src/: collapser.js  index.html  main.css  main.js  site.css  site.js
src-tauri/: Cargo.toml  Rocket.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  endpoints.rs  filters.rs  handlers.rs  main.rs  models.rs  payloads.rs  server.rs  templating.rs
src-tauri/src/templates/: logchunk.html
src-tauri/src/templates/payloads/: message.html
src-tauri/templates/: logchunk.html  logentry.html  newlogs.html  notice.html
src-tauri/templates/payloads/: message.html  variable.html
src/templates/: logentry.html  newlogs.html
src/templates/payloads/: variable.html
templates/: index.html
templates/payloads/: json.html
